# bsccm-jax

./: .gitignore  LICENSE  NOTICE  README.md  modal_app.py  pyproject.toml
configs/: allen_lamin.yml  allen_lamin_3d.yml  bsccm_vs_finetune.yml
docs/: ECOSYSTEM.md  RESEARCH.md  RESULTS.md
examples/: ideal_teaching.py
hardware/: README.md  gen_led_head.py  led_frame.scad  led_head.scad  led_head.stl  led_head_ofm.scad  led_head_ofm.stl
hardware/ofmlibs/: NOTICE  libdict.scad  locking_dovetail.scad  utilities.scad
scripts/: allen_to_omezarr.py  benchmark_table.py  bsccm_to_omezarr.py  dryad_download.py  dusk_demo.py  dusk_real.py  eval_allen.py  eval_external_wbc.py  eval_vs.py  eval_vscyto2d.py  fpm_bsccm_coherent.py  fpm_demo.py  fpm_uconn.py  fpm_validate.py  parallel_download.py  real_cell_demo.py  run_benchmark.py  train_phenotype.py
src/bsccm_jax/: __init__.py  amortized.py  chromatix_oracle.py  design.py  dpc.py  fpm.py  kinetics.py  led_array.py  neuph.py  neural_field.py  phenotype.py  selftest.py  trackio_logger.py  view.py
tests/: test_design_bridge.py  test_dpc.py  test_fpm_bridge.py  test_kinetics.py  test_led_array.py
